# cookiecutter-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml  taskfile.yml
hooks/: post_gen_project.py
tests/: test_generate_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  taskfile.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/notebooks/: README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: config.py
{{cookiecutter.project_slug}}/tests/: test_placeholder.py
